<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="456dp"
    android:background="@drawable/bottom_dialog_bg"
    tools:theme="@style/Theme.AppCompat">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_title"
                android:layout_width="40dp"
                android:layout_height="4dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:background="@drawable/grabber"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:text="@string/cov_setting_title"
                android:textColor="@color/ai_icontext1"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_title" />

            <ImageButton
                android:id="@+id/btn_close"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="end"
                android:layout_marginEnd="24dp"
                android:background="@drawable/app_setting_exit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_title"
                app:tint="@color/ai_icontext2" />

            <ImageView
                android:id="@+id/iv_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="#1DFFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <LinearLayout
                android:id="@+id/ll_agent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/settings_item_bg"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_line">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_preset"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_preset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/cov_setting_preset"
                        android:textColor="@color/ai_icontext1"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/iv_preset_arrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="14dp"
                        android:src="@drawable/icon_dropleft"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/ai_icontext2" />

                    <TextView
                        android:id="@+id/tv_preset_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/ai_icontext1"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/iv_preset_arrow"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="xxxx" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="16dp"
                    android:background="@color/ai_line1" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_language"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/cov_setting_language"
                        android:textColor="@color/ai_icontext1"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/iv_language_arrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="14dp"
                        android:src="@drawable/icon_dropleft"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/ai_icontext2" />

                    <TextView
                        android:id="@+id/tv_language_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/ai_icontext1"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/iv_language_arrow"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="xxxx" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_device"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:alpha="0.3"
                android:text="@string/cov_setting_advanced_settings"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_agent" />

            <LinearLayout
                android:id="@+id/ll_device"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/settings_item_bg"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_device">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="72dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_bhvs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/cov_setting_bhvs"
                        android:textColor="@color/ai_icontext1"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_bhvs_info"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/cov_setting_bhvs_info"
                        android:textColor="@color/ai_icontext3"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toStartOf="@+id/cb_noise_cancellation"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_bhvs" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/cb_noise_cancellation"
                        android:layout_width="51dp"
                        android:layout_height="31dp"
                        android:layout_marginEnd="16dp"
                        android:button="@drawable/cb_def_selector"
                        app:buttonTint="@null"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="16dp"
                    android:background="@color/ai_line1" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_ai_vad"
                    android:layout_width="match_parent"
                    android:layout_height="72dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_ai_vad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="18dp"
                        android:text="@string/cov_setting_ai_vad"
                        android:textColor="@color/ai_icontext1"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_ai_vad_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/cov_setting_ai_vad_info"
                        android:textColor="@color/ai_icontext3"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_ai_vad" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/cb_ai_vad"
                        android:layout_width="51dp"
                        android:layout_height="31dp"
                        android:layout_marginEnd="16dp"
                        android:button="@drawable/cb_def_selector"
                        android:checked="true"
                        app:buttonTint="@null"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="16dp"
                    android:background="@color/ai_line1" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_force_response"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_force_response"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/cov_setting_force_response"
                        android:textColor="@color/ai_icontext1"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/cb_force_response"
                        android:layout_width="51dp"
                        android:layout_height="31dp"
                        android:layout_marginEnd="16dp"
                        android:button="@drawable/cb_def_selector"
                        app:buttonTint="@null"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintTop_toBottomOf="@+id/ll_device" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/v_options_mask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_options"
            android:layout_width="218dp"
            android:layout_height="150dp"
            android:backgroundTint="@color/ai_line1"
            app:cardCornerRadius="12dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rc_options"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.recyclerview.widget.RecyclerView>
        </androidx.cardview.widget.CardView>
    </FrameLayout>

</FrameLayout>
